# EngineLab

./: .clang-format  .gitignore  CMakeLists.txt  CONSTRAINTS.md  CombineCode.ps1  LICENSE  README.md  code_review_checklist.md  main.cpp  system  system.lua  system.toml
assets/: .drawio
assets/files/: CombineCode.ps1  CombineSystemCode.ps1  OldCode.cpp  OldImplicit  OldSystemEditor.h
assets/shaders/: cube.frag  cube.vert  depth.frag  grid.frag  grid.frag.glsl  grid.vert  grid.vert.glsl  line.frag  line.vert  main.frag.glsl  sky.frag  sky.vert
include/Core/: Application.h  Context.h  EnvironmentManager.h  ImGuiManager.h  InputManager.h  Renderer.h  ShaderManager.h  WindowManager.h
include/Environments/: Dashboard.h  Environment.h  Simulation.h
include/Utils/: Logger.h  OpenGLSetup.h
include/core/: Application.h  Camera.h  Context.h  DeltaTime.h  EnvironmentManager.h  ImGuiManager.h  InputManager.h  Proton.h  Renderer.h  SceneManager.h  ShaderManager.h  Time.h  WindowManager.h  types.h
include/dynamics/: Body.h  Constraint.h  ConstraintSolver.h  DynamicSystem.h  Dynamics.h  ForceGenerator.h  GravityForce.h  Particle.h  Solver.h  SpringForce.h  SystemVisualizer.h
include/dynamics/constraints/: DistanceConstraint.h  SphericalJoint.h  TranslationalConstraint.h
include/dynamics/forces/: Gravity.h  GravityForceGenerator.h  SpringForceGenerator.h
include/environments/: Dashboard.h  Environment.h  Simulation.h
include/graphics/: Camera.h  Renderer.h  Shader.h  ShaderManager.h
include/physics/: RigidBody.h
include/scenes/: GameLevel.h  MainMenu.h  Scene.h
include/system/: SystemBuilder.h  SystemConfiguration.h  SystemEditor.h  SystemGuizmo.h  SystemManager.h  SystemSolver.h  SystemVisualizer.h
include/utils/: Logger.h  NewtonRaphson.h  OpenGLSetup.h  pch.h
src/: main.cpp
src/Core/: Application.cpp  Camera.cpp  EnvironmentManager.cpp  ImGuiManager.cpp  InputManager.cpp  Renderer.cpp  ShaderManager.cpp  WindowManager.cpp
src/Environments/: Dashboard.cpp  Simulation.cpp
src/core/: Application.cpp  Camera.cpp  EnvironmentManager.cpp  ImGuiManager.cpp  InputManager.cpp  Renderer.cpp  SceneManager.cpp  ShaderManager.cpp  WindowManager.cpp
src/dynamics/: Body.cpp  ConstraintSolver.cpp  DistanceConstraint.cpp  DynamicSystem.cpp  Dynamics.cpp  Particle.cpp  Solver.cpp
src/dynamics/constraints/: DistanceConstraint.cpp  SphericalJoint.cpp  TranslationalConstraint.cpp
src/environments/: Dashboard.cpp  Simulation.cpp
src/graphics/: Camera.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp
src/physics/: RigidBody.cpp
src/scenes/: GameLevel.cpp  MainMenu.cpp
